--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
     image: luizimcpi/ktor-rinha-mongo-service
     environment:
-      - MONGO_URL=mongodb://root:root@localhost
+      - MONGO_URL=mongodb://root:root@database
     ports:
       - 8080:8080
     depends_on:
